--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/temp.png"
+            src="./assets/profile.png"
             alt="Profile picture"
             class="about-pic"
           />
