--- a/index.html
+++ b/index.html
@@ -295,22 +295,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg"
+                src="./assets/project2.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Available soon</h2>
+            <h2 class="experience-sub-title project-title">Product Listing</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/0gopi0/Product_Listing'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://product-listing-lfyb.onrender.com/'"
               >
                 Live Demo
               </button>
