--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Vemula Venkata Gopi</h1>
-        <p class="section__text__p2">Full stack developer(MERN)</p>
+        <p class="section__text__p2">Full stack developer</p>
         <div class="btn-container">
           <button class="btn btn-color-2" onclick="location.href='./#contact'">
             Contact Info
@@ -98,8 +98,7 @@
           </div>
           <div class="text-container">
             <p>
-              MCA graduate with a strong interest in full-stack web development,
-              particularly in the MERN stack. I enjoy building responsive and
+              MCA graduate with a strong interest in full-stack web development. I enjoy building responsive and
               user-friendly web applications and am always eager to learn and
               improve. Looking forward to contributing to meaningful projects
               while growing as a developer
@@ -152,6 +151,37 @@
                   <h3>TypeScript</h3>
                 </div>
               </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>JavaScript</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Python</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MySQL</h3>
+                </div>
+              </article>
+              
               <article>
                 <img
                   src="./assets/checkmark.png"
