--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
           </div>
           <div class="text-container">
             <p>
-              MCA graduate with a strong interest in full-stack web development. I enjoy building responsive and
-              user-friendly web applications and am always eager to learn and
-              improve. Looking forward to contributing to meaningful projects
-              while growing as a developer
+              MCA graduate with a strong interest in full-stack web development.
+              I enjoy building responsive and user-friendly web applications and
+              am always eager to learn and improve. Looking forward to
+              contributing to meaningful projects while growing as a developer
             </p>
           </div>
         </div>
@@ -121,26 +121,6 @@
           <div class="details-container">
             <h2 class="experience-sub-title">Full Stack Development</h2>
             <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>CSS</h3>
-                </div>
-              </article>
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -178,10 +158,70 @@
                   class="icon"
                 />
                 <div>
+                  <h3>DSA</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Java</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Redux</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>JQuerry</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>CSS</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
                   <h3>MySQL</h3>
                 </div>
               </article>
-              
+
               <article>
                 <img
                   src="./assets/checkmark.png"
