--- a/index.html
+++ b/index.html
@@ -389,22 +389,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg"
+                src="./assets//gamehub.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Available soon</h2>
+            <h2 class="experience-sub-title project-title">Game Hub</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/0gopi0/game-hub'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://game-hub-two-flax.vercel.app/'"
               >
                 Live Demo
               </button>
